--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -38,7 +38,7 @@
           </tbody>
         </table>
       </div><!--account or group-->
-      <div ng-if="currentUser.accessLevel =='regional'"  flex-gt-sm="40" flex-gt-lg="25"
+      <div ng-if="currentUser.accessLevel =='regional'" flex-xs="100" flex-gt-sm="40" flex-gt-lg="25"
             flex-gt-md="30" layout  style="border:solid thin blue; min-width:300px;">
         <div style="" >
             <div ng-if="currentUser.regionId == 1" id="state-selector"  layout layout-align="center center">
