--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -39,7 +39,7 @@
         </table>
       </div><!--account or group-->
       <div ng-if="currentUser.accessLevel =='regional'" flex-xs="100" flex-gt-sm="40" flex-gt-lg="25"
-            flex-gt-md="30" layout  style="border:solid thin blue; min-width:300px;">
+            flex-gt-md="30" layout style="min-width:340px;">
         <div style="" >
             <div ng-if="currentUser.regionId == 1" id="state-selector"  layout layout-align="center center">
               <span class="md-subhead">Select state:</span>
@@ -48,7 +48,7 @@
                 <md-option ng-repeat="state in states" value="{{ state.id }}">{{ state.title }}</md-option>
               </md-select>
             </div>
-            <div layout="column" style="width:300px;border:solid thin green;">
+            <div flex-xs="100" layout="column" style="width:340px;">
               <div layout="row" layout-align="space-between " class="">
                 <span class="md-title group-title" style="margin:.2rem;">{{ selectedState }} {{ statePercentage | number:0 }}%</span>
                 <div layout="column" layout-align="center center">
