--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -9,10 +9,10 @@
       </md-select>
 
     </div><!--state selector-->
-    <div flex layout layout-xs="column" layout-align-xs="center center" style="border:solid thin greenyellow;min-height:40vh;">
+    <div flex layout layout-xs="column" layout-align-xs="center center" style="border:solid thin greenyellow;">
       <div layout-sm="column" layout-gt-sm="row" layout-align-gt-sm="space-around" layout-xs="column"
            layout-align-xs="start start" class="md-padding" id="top-container">
-        <div flex layout>
+        <div flex layout style="border:solid thin blue;min-height:40vh;">
           <div ng-if="currentUser.accessLevel !='regional'"   layout="column" layout-align="start" style="min-height:18rem;">
             <div layout="column" layout-align="start"
                  style="margin-top:1rem;">
