--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -10,7 +10,7 @@
   </div>
   <div ng-if="currentUser.accessLevel=='regional'">
     <div layout="column">
-      <div ng-if="currentUser.regionId==1" class="top-container" flex="auto" layout layout-align="center start">TOP</div>
+      <div  class="top-container" flex="auto" layout layout-align="center start">TOP</div>
       <div layout layout-xs="column">
         <div class="left-container" flex="70" flex-xs="100" >LEFT</div>
         <div class="right-container" flex="30" flex-xs="100" >RIGHT</div>
