--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -8,13 +8,12 @@
       RIGHT
     </div>
   </div>
-  <div ng-if="currentUser.accessLevel=='regional'">
+  <div ng-if="currentUser.accessLevel=='regional'" layout layout-xs="column">
     <div layout="column">
       <div  class="top-container" flex="auto" layout layout-align="center start">TOP</div>
-      <div class="left-container" flex="70" flex-xs="100" >LEFT</div>
-      <div class="right-container" flex="30" flex-xs="100" >RIGHT</div>
       <div layout layout-xs="column">
-
+        <div class="left-container" flex="70" flex-xs="100" >LEFT</div>
+        <div class="right-container" flex="30" flex-xs="100" >RIGHT</div>
       </div>
     </div>
   </div>
