--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -1,6 +1,6 @@
 <md-content flex layout="column" style=" height:100vh; border:solid thin red; background-color:lightgreen;">
 
-  <div ng-if="currentUser.accessLevel!='regional'" layout layout-xs="column">
+  <div ng-if="currentUser.accessLevel!='regional'" layout >
     <div class="left-container" flex="70" flex-xs="100" >
       LEFT
     </div>
