--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -20,9 +20,9 @@
     </div>
     <div hide-xs class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs >
       <div layout="column" layout-align="center">
-        <div>DOWNLOAD</div>
-        <div>CONFIRMATION</div>
-        <div>ISSUE TRACKER</div>
+        <div id="download-contianer">DOWNLOAD</div>
+        <div id="confirmation-container">CONFIRMATION</div>
+        <div id="issue-contianer">ISSUE TRACKER</div>
       </div>
     </div>
   </div>
