--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -19,7 +19,7 @@
      </div>
     </div>
     <div hide-xs class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs >
-      <div layout="column" layout-align="center">
+      <div layout="column" layout-align="space-around">
         <div id="download-contianer">DOWNLOAD</div>
         <div id="confirmation-container">CONFIRMATION</div>
         <div id="issue-contianer">ISSUE TRACKER</div>
