--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -2,7 +2,7 @@
 
   <div ng-if="currentUser.accessLevel!='regional'" layout layout-xs="column">
     <div class="left-container" flex="70" flex-xs="100" layout layout-xs >
-     <div  flex class="md-padding" style="background-color: lightyellow;min-height:100vh;height:100%">
+     <div  flex class="md-padding" style="background-color: lightyellow;min-height:100vh;">
        <div layout="column">
          <div flex="grow" layout layout-align="space-between center" class="md-padding" style="min-height:2rem;background-color: #00FF00;">
            <div  class="area-title-bar">TITLE</div>
@@ -18,11 +18,11 @@
        </div>
      </div>
     </div>
-    <div hide-xs class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs >
-      <div layout="column" layout-align="space-around">
-        <div id="download-contianer">DOWNLOAD</div>
-        <div id="confirmation-container">CONFIRMATION</div>
-        <div id="issue-contianer">ISSUE TRACKER</div>
+    <div hide-xs class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs style="min-height:100vh;" >
+      <div layout="column" layout-align="" class="md-padding" style="min-height:100%;">
+        <div class="md-padding" id="download-contianer">DOWNLOAD</div>
+        <div class="md-padding" id="confirmation-container">CONFIRMATION</div>
+        <div class="md-padding" id="issue-contianer">ISSUE TRACKER</div>
       </div>
     </div>
   </div>
