--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -2,46 +2,56 @@
 
   <div ng-if="currentUser.accessLevel!='regional'" layout layout-xs="column">
     <div class="left-container" flex="70" flex-xs="100" layout layout-xs >
-     <div  flex class="md-padding" style="background-color: lightyellow;min-height:100vh;">
-       <div layout="column">
-         <div flex="grow" layout layout-align="space-between center" class="md-padding" style="min-height:2rem;background-color: #00FF00;">
-           <div  class="area-title-bar">TITLE</div>
-           <div  class="area-button-bar">BUTTON</div>
-         </div>
-         <div class="percentage-bar"></div>
-         <div flex layout="column" class="table-container">
-          <div>TABLE</div>
-           <div>TABLE</div>
-           <div>TABLE</div>
-           <div>TABLE</div>
-         </div>
-       </div>
-     </div>
+      <div  flex class="md-padding" style="background-color: lightyellow;min-height:100%;">
+        <div layout="column">
+          <div flex="grow" layout layout-align="space-between center" class="md-padding" style="min-height:2rem;background-color: #00FF00;">
+            <div  class="area-title-bar">TITLE</div>
+            <div  class="area-button-bar">BUTTON</div>
+          </div>
+          <div class="percentage-bar"></div>
+          <div flex layout="column" class="table-container">
+            <div>TABLE</div>
+            <div>TABLE</div>
+            <div>TABLE</div>
+            <div>TABLE</div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div hide-xs class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs style="min-height:100vh;" >
+    <div hide-xs class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs style="min-height:100%;" >
       <div layout="column" layout-align="" class="md-padding" style="min-height:100%;">
-        <div class="md-padding" id="download-contianer">DOWNLOAD</div>
-        <div class="md-padding" id="confirmation-container">CONFIRMATION</div>
-        <div class="md-padding" id="issue-contianer">ISSUE TRACKER</div>
+        <div class="md-padding" id="download-container">DOWNLOAD</div>
+        <div class="md-padding" id="confirmation-container">DOWNLOAD</div>
+        <div class="md-padding" id="issuetracker-container">DOWNLOAD</div>
       </div>
     </div>
   </div>
   <div ng-if="currentUser.accessLevel=='regional'" layout layout-xs="column">
-    <div layout="column">
+    <div flex layout="column" style="border:solid thin darkblue;min-height:100vh;">
       <div  class="top-container" flex="auto" layout layout-align="center start">TOP</div>
       <div layout layout-xs="column">
-        <div class="left-container" flex="70" flex-xs="100" >
-          <div flex="grow" layout layout-align="space-between center" style="background-color: lightyellow;">
+        <div class="left-container" flex="70" flex-xs="100" layout layout-xs >
+          <div  flex class="md-padding" style="background-color: lightyellow;min-height:100%;">
             <div layout="column">
-              <div flex="grow" layout layout-align="space-between center" style="min-height:2rem;background-color: #00FF00;">
+              <div flex="grow" layout layout-align="space-between center" class="md-padding" style="min-height:2rem;background-color: #00FF00;">
                 <div  class="area-title-bar">TITLE</div>
                 <div  class="area-button-bar">BUTTON</div>
               </div>
               <div class="percentage-bar"></div>
+              <div flex layout="column" class="table-container">
+                <div>TABLE</div>
+                <div>TABLE</div>
+                <div>TABLE</div>
+                <div>TABLE</div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="right-container" flex="30" flex-xs="100" >RIGHT</div>
+        <div hide-xs class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs style="min-height:100%;" >
+          <div layout="column" layout-align="" class="md-padding" style="min-height:100%;">
+            <div class="md-padding" id="a-contianer">DOWNLOAD</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
