--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -2,8 +2,8 @@
 
   <div ng-if="currentUser.accessLevel!='regional'" layout layout-xs="column">
     <div class="left-container" flex="70" flex-xs="100" layout layout-xs >
-      <div  flex layout="column" class="md-padding" style="background-color: lightyellow;min-height:100%;">
-        <div layout="column">
+      <div  flex class="md-padding" style="background-color: lightyellow;min-height:100%;">
+        <div flex layout="column">
           <div flex="grow" layout layout-align="space-between center" class="md-padding" style="min-height:2rem;background-color: #00FF00;">
             <div  class="area-title-bar">TITLE</div>
             <div  class="area-button-bar">BUTTON</div>
