--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -2,7 +2,7 @@
 
   <div ng-if="currentUser.accessLevel!='regional'" layout layout-xs="column">
     <div class="left-container" flex="70" flex-xs="100" layout layout-xs >
-      <div  flex class="md-padding" style="background-color: lightyellow;min-height:100%;">
+      <div  flex class="md-padding" style="background-color: lightyellow;">
         <div flex layout="column">
           <div flex="grow" layout layout-align="space-between center" class="md-padding" style="min-height:2rem;background-color: #00FF00;">
             <div  class="area-title-bar">TITLE</div>
@@ -27,18 +27,18 @@
     </div>
   </div>
   <div ng-if="currentUser.accessLevel=='regional'" layout layout-xs="column">
-    <div flex layout="column" style="border:solid thin darkblue;min-height:100vh;">
+    <div flex layout="column" style="border:solid thin lime;min-height:100%;">
       <div  class="top-container" flex="auto" layout layout-align="center start">TOP</div>
       <div layout layout-xs="column">
         <div class="left-container" flex="70" flex-xs="100" layout layout-xs >
-          <div  flex class="md-padding" style="background-color: lightyellow;min-height:100%;">
+          <div  flex class="md-padding" style="background-color: lightyellow;">
             <div layout="column">
               <div flex="grow" layout layout-align="space-between center" class="md-padding" style="min-height:2rem;background-color: #00FF00;">
                 <div  class="area-title-bar">TITLE</div>
                 <div  class="area-button-bar">BUTTON</div>
               </div>
               <div class="percentage-bar"></div>
-              <div flex layout="column" class="table-container">
+              <div hide-xs flex layout="column" class="chart-container">
                 <div>TABLE</div>
                 <div>TABLE</div>
                 <div>TABLE</div>
@@ -47,9 +47,15 @@
             </div>
           </div>
         </div>
-        <div hide-xs class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs style="min-height:100%;" >
+        <div class="right-container md-padding" flex="30" flex-xs="100" layout layout-xs style="min-height:100vh;" >
           <div layout="column" layout-align="" class="md-padding" style="min-height:100%;">
-            <div class="md-padding" id="a-contianer">DOWNLOAD</div>
+            <div layout layout-align="space-around start" class="md-padding table-filter" id="a-contianer">
+              <div>Filter</div>
+              <div>Filter Reset</div>
+            </div>
+            <div>
+              TABLE
+            </div>
           </div>
         </div>
       </div>
