--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -27,11 +27,11 @@
     </div>
   </div>
   <div ng-if="currentUser.accessLevel=='regional'" layout layout-xs="column">
-    <div flex layout="column" style="border:solid thin lime;min-height:100%;">
+    <div flex layout="column" style="background-color:lightpink;border:solid thin lime;">
       <div  class="top-container" flex="auto" layout layout-align="center start">TOP</div>
       <div layout layout-xs="column">
         <div class="left-container" flex="70" flex-xs="100" layout layout-xs >
-          <div  flex class="md-padding" style="background-color: lightyellow;">
+          <div  flex class="md-padding lime" style="background-color: limegreen">
             <div layout="column">
               <div flex="grow" layout layout-align="space-between center" class="md-padding" style="min-height:2rem;background-color: #00FF00;">
                 <div  class="area-title-bar">TITLE</div>
